# sheva1.2

./: .env.example  .gitignore  RASCUNHO-METODOS.md  README.md  ecosystem.config.cjs  package-lock.json  package.json  tmp_db_test.mjs  tsconfig.base.json  turbo.json
apps/odds-radar/: .env.example  pyproject.toml  tmp_cf_test.py
apps/odds-radar-chromium/: .env.example  .gitignore  .telegram_config.json  pyproject.toml  requirements.txt
apps/odds-radar-chromium/.browser_data_bak/: Local State  cookies.json  cookies.json.bak
apps/odds-radar-chromium/.browser_test/: Local State
apps/odds-radar-chromium/.browser_test_all_args_offscreen/: Local State
apps/odds-radar-chromium/.browser_test_all_args_visible/: Local State
apps/odds-radar-chromium/.browser_test_full_stealth_offscreen/: Local State
apps/odds-radar-chromium/.browser_test_minimo/: Local State
apps/odds-radar-chromium/config/: settings.py
apps/odds-radar-chromium/data/: session_tokens.json
apps/odds-radar-chromium/docs/: ETAPA-3-TELEGRAM-INTEGRATION.md
apps/odds-radar-chromium/odds-radar/: README.md  requirements.txt
apps/odds-radar-chromium/scripts/: analyze_traffic.py  bet_auto.py  bet_daemon.py  bet_direct.py  bet_hybrid.py  bet_passive.py  bet_telegram.py  bot_api.py  capture_addbet_body.py  capture_first_cc.py  capture_tokens.py  check_camoufox_cookies.py  check_login.py  debug_click.py  debug_dom_structure.py  debug_esports_competitions.py  debug_gt_inner.py  debug_gt_nav.py  debug_header.py  debug_scan_gt.py  extract_correlation.py  extract_tokens.py  find_betswebapi_init.py  (+31 more)
(+690 files in other folders)
